--- a/.github/workflows/dev-pipeline.yml
+++ b/.github/workflows/dev-pipeline.yml
@@ -111,7 +111,9 @@ jobs:
         with:
           name: app-jar
           path: target/*.jar
-          retention-days: 1  test:
+          retention-days: 1
+  
+  test:
     needs: build
     runs-on: [self-hosted, Runner-1]
     container:
@@ -230,3 +232,29 @@ jobs:
       - name: Clean Docker System
         if: always()
         run: docker system prune -af --volumes
+
+  notify:    needs: scan-and-push
+    runs-on: [self-hosted, Runner-1]
+    if: always()
+    steps:
+      - name: Pipeline Status
+        uses: actions/github-script@v6
+        with:
+          script: |
+            const conclusion = '${{ job.status }}'
+            const message = `Pipeline for ${{ env.APP_NAME }} version ${{ env.APP_VERSION }} completed with status: ${conclusion}`
+            
+            await github.rest.issues.createComment({
+              owner: context.repo.owner,
+              repo: context.repo.repo,
+              issue_number: context.issue.number,
+              body: message
+            })
+
+      - name: Notify on Success
+        if: success()
+        run: echo "Pipeline completed successfully!"
+
+      - name: Notify on Failure
+        if: failure()
+        run: echo "Pipeline failed!"
